--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
 	<div id="equipment-selectors"></div>
 
+	<h2>Collections</h2>
+	<div id="collection-selectors"></div>
+
 	<h2>Chosen Setup Skills</h2>
 	<div id="skills-output"></div>
 
@@ -18,6 +21,7 @@
 	];
 
 	let equipmentData = {};
+	let collectionData = {};
 
 	function createDropdown(type, index = null) {
 		const label = document.createElement("label");
@@ -40,7 +44,7 @@
 			}
 		}
 
-		// When user picks something, update skills
+		// Update skills when selected
 		select.addEventListener("change", updateSkills);
 
 		const container = document.getElementById("equipment-selectors");
@@ -49,13 +53,35 @@
 		container.appendChild(document.createElement("br"));
 	}
 
-	// Update skills output
+	function createCollectionCheckboxes() {
+		const container = document.getElementById("collection-selectors");
+
+		for (const [name, info] of Object.entries(collectionData)) {
+			const div = document.createElement("div");
+
+			const checkbox = document.createElement("input");
+			checkbox.type = "checkbox";
+			checkbox.id = "collection-" + name;
+			checkbox.value = name;
+			checkbox.addEventListener("change", updateSkills);
+
+			const label = document.createElement("label");
+			label.htmlFor = "collection-" + name;
+			label.textContent = name;
+
+			div.appendChild(checkbox);
+			div.appendChild(label);
+			container.appendChild(div);
+		}
+	}
+
 	function updateSkills() {
 		const outputDiv = document.getElementById("skills-output");
 		outputDiv.innerHTML = "";
 
 		let chosenItems = [];
 
+		// Equipment + Retainers
 		equipmentTypes.forEach(type => {
 			if (type === "Accessory" || type === "Retainer") {
 				for (let i = 1; i <= 3; i++) {
@@ -68,9 +94,17 @@
 			}
 		});
 
-		// Display all skills from chosen items
+		// Collections
+		for (const [name, info] of Object.entries(collectionData)) {
+			const checkbox = document.getElementById("collection-" + name);
+			if (checkbox && checkbox.checked) {
+				chosenItems.push(name);
+			}
+		}
+
+		// Display skills
 		chosenItems.forEach(itemName => {
-			const info = equipmentData[itemName];
+			let info = equipmentData[itemName] || collectionData[itemName];
 			if (info && info.skill) {
 				const itemDiv = document.createElement("div");
 				itemDiv.innerHTML = `<b>${itemName}</b><br>` +
@@ -81,19 +115,26 @@
 		});
 	}
 
-	// Load equipment JSON
-	fetch("equipment_list.json")
-		.then(response => response.json())
-		.then(data => {
-			equipmentData = data;
-			equipmentTypes.forEach(type => {
-				if (type === "Accessory" || type === "Retainer") {
-					for (let i = 1; i <= 3; i++) createDropdown(type, i);
-				} else {
-					createDropdown(type);
-				}
-			});
+	// Load both JSON files
+	Promise.all([
+		fetch("equipment_list.json").then(r => r.json()),
+		fetch("collection_list.json").then(r => r.json())
+	]).then(([equip, coll]) => {
+		equipmentData = equip;
+		collectionData = coll;
+
+		// Create equipment dropdowns
+		equipmentTypes.forEach(type => {
+			if (type === "Accessory" || type === "Retainer") {
+				for (let i = 1; i <= 3; i++) createDropdown(type, i);
+			} else {
+				createDropdown(type);
+			}
 		});
+
+		// Create collection checkboxes
+		createCollectionCheckboxes();
+	});
 	</script>
 </body>
 </html>
