--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
 		// Create collection checkboxes
 		createCollectionCheckboxes();
 	});
+			
+		loadCollections();
+
 	</script>
 </body>
 </html>
