--- a/index.html
+++ b/index.html
@@ -14,130 +14,7 @@
 	<h2>Chosen Setup Skills</h2>
 	<div id="skills-output"></div>
 
-	<script>
-	const equipmentTypes = [
-		"Coin", "Bait", "Hex", "Weapon", "Head", "Chest", "Hands", "Feet",
-		"Power", "Emblem", "Coffin", "Accessory", "Mount", "Retainer"
-	];
-
-	let equipmentData = {};
-	let collectionData = {};
-
-	function createDropdown(type, index = null) {
-		const label = document.createElement("label");
-		label.textContent = index ? `${type} ${index}: ` : `${type}: `;
-
-		const select = document.createElement("select");
-		select.id = index ? `select-${type}-${index}` : `select-${type}`;
-
-		const defaultOption = document.createElement("option");
-		defaultOption.value = "";
-		defaultOption.textContent = "-- Select " + type + " --";
-		select.appendChild(defaultOption);
-
-		for (const [name, info] of Object.entries(equipmentData)) {
-			if (info.type === type) {
-				const option = document.createElement("option");
-				option.value = name;
-				option.textContent = name;
-				select.appendChild(option);
-			}
-		}
-
-		// Update skills when selected
-		select.addEventListener("change", updateSkills);
-
-		const container = document.getElementById("equipment-selectors");
-		container.appendChild(label);
-		container.appendChild(select);
-		container.appendChild(document.createElement("br"));
-	}
-
-	function createCollectionCheckboxes() {
-		const container = document.getElementById("collection-selectors");
-
-		for (const [name, info] of Object.entries(collectionData)) {
-			const div = document.createElement("div");
-
-			const checkbox = document.createElement("input");
-			checkbox.type = "checkbox";
-			checkbox.id = "collection-" + name;
-			checkbox.value = name;
-			checkbox.addEventListener("change", updateSkills);
-
-			const label = document.createElement("label");
-			label.htmlFor = "collection-" + name;
-			label.textContent = name;
-
-			div.appendChild(checkbox);
-			div.appendChild(label);
-			container.appendChild(div);
-		}
-	}
-
-	function updateSkills() {
-		const outputDiv = document.getElementById("skills-output");
-		outputDiv.innerHTML = "";
-
-		let chosenItems = [];
-
-		// Equipment + Retainers
-		equipmentTypes.forEach(type => {
-			if (type === "Accessory" || type === "Retainer") {
-				for (let i = 1; i <= 3; i++) {
-					const select = document.getElementById(`select-${type}-${i}`);
-					if (select && select.value) chosenItems.push(select.value);
-				}
-			} else {
-				const select = document.getElementById(`select-${type}`);
-				if (select && select.value) chosenItems.push(select.value);
-			}
-		});
-
-		// Collections
-		for (const [name, info] of Object.entries(collectionData)) {
-			const checkbox = document.getElementById("collection-" + name);
-			if (checkbox && checkbox.checked) {
-				chosenItems.push(name);
-			}
-		}
-
-		// Display skills
-		chosenItems.forEach(itemName => {
-			let info = equipmentData[itemName] || collectionData[itemName];
-			if (info && info.skill) {
-				const itemDiv = document.createElement("div");
-				itemDiv.innerHTML = `<b>${itemName}</b><br>` +
-					info.skill.map(s => `- ${s[0]} (${s[1]})`).join("<br>");
-				outputDiv.appendChild(itemDiv);
-				outputDiv.appendChild(document.createElement("br"));
-			}
-		});
-	}
-
-	// Load both JSON files
-	Promise.all([
-		fetch("equipment_list.json").then(r => r.json()),
-		fetch("collection_list.json").then(r => r.json())
-	]).then(([equip, coll]) => {
-		equipmentData = equip;
-		collectionData = coll;
-
-		// Create equipment dropdowns
-		equipmentTypes.forEach(type => {
-			if (type === "Accessory" || type === "Retainer") {
-				for (let i = 1; i <= 3; i++) createDropdown(type, i);
-			} else {
-				createDropdown(type);
-			}
-		});
-
-		// Create collection checkboxes
-		createCollectionCheckboxes();
-	});
-			
-	loadCollections();
-
-	</script>
+	<!-- Load your JS logic -->
+	<script src="script.js"></script>
 </body>
 </html>
