--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Bloodlore Chronicles Combat Prediction</title>
+	<!-- Link to external stylesheet -->
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<h1>Bloodlore Chronicles Combat Prediction</h1>
