--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 	<h2>Chosen Setup Skills</h2>
 	<div id="skills-output"></div>
 
+	<h2>Skill Summary</h2>
+    <div id="skills-summary"></div>
+
 	<!-- Load your JS logic -->
 	<script src="script.js"></script>
 </body>
