--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
 	<button id="checkAllBtn">Check All</button>
 	<button id="uncheckAllBtn">Uncheck All</button>
 	
-	<div id="collectionCheckboxes">
-		<label><input type="checkbox" class="collection-box" value="1-1"> 1-1</label><br>
-		<label><input type="checkbox" class="collection-box" value="1-2"> 1-2</label><br>
-		<label><input type="checkbox" class="collection-box" value="1-3"> 1-3</label><br>
-	</div>
+	<div id="collectionCheckboxes"></div>
 
 	<h2>Chosen Setup Skills</h2>
 	<div id="skills-output"></div>
