--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 	<div id="equipment-selectors"></div>
 
 	<h2>Collections</h2>
-	<button id="checkAllBtn">Check All</button>
-	<button id="uncheckAllBtn">Uncheck All</button>
-	<div id="collectionCheckboxes"></div>
+	<div id="collection-selectors"></div>
 
 	<h2>Chosen Setup Skills</h2>
 	<div id="skills-output"></div>
