--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div id="skills-summary"></div>
 
 	<!-- Load your JS logic -->
-	<script src="script.js"></script>
+	<script src="ui.js"></script
+	<script src="battle.js"></script>
 </body>
 </html>
