--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<h2>Skill Summary</h2>
     <div id="skills-summary"></div>
 
+	<button id="goBattleBtn">Go to Battle</button>
+	
 	<!-- Load your JS logic -->
 	<script src="ui.js"></script
 	<script src="battle.js"></script>
