--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 	<div id="equipment-selectors"></div>
 
 	<h2>Collections</h2>
+	<div>
+		<button id="checkAllCollections">Check All</button>
+		<button id="uncheckAllCollections">Uncheck All</button>
+	</div>
 	<div id="collection-selectors"></div>
 
 	<h2>Chosen Setup Skills</h2>
@@ -18,7 +22,8 @@
 
 	<h2>Skill Summary</h2>
     <div id="skills-summary"></div>
-
+	
+    <button id="saveSetupBtn">Save Setup</button>
 	<button id="goBattleBtn">Go to Battle</button>
 	
 	<!-- Load your JS logic -->
