--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div id="equipment-selectors"></div>
 
 	<h2>Collections</h2>
-	<div>
+	<div id="collection-controls">
 		<button id="checkAllCollections">Check All</button>
 		<button id="uncheckAllCollections">Uncheck All</button>
 	</div>
