--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 	<h2>Skill Summary</h2>
     <div id="skills-summary"></div>
 	
-    <button id="saveSetupBtn">Save Setup</button>
+    <input type="text" id="setupName" placeholder="Setup Name">
+	<button id="saveSetupBtn">Save Setup</button>
+	<select id="loadSetupSelect"></select>
+	<button id="loadSetupBtn">Load</button>
+	
 	<button id="goBattleBtn">Go to Battle</button>
 	
 	<!-- Load your JS logic -->
