--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<button id="saveSetupBtn">Save Setup</button>
 	<select id="loadSetupSelect"></select>
 	<button id="loadSetupBtn">Load</button>
-	<button id="deleteSetupBtn">Load</button>
+	<button id="deleteSetupBtn">Delete</button>
 	
 	<button id="goBattleBtn">Go to Battle</button>
 	
