--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<button id="goBattleBtn">Go to Battle</button>
 	
 	<!-- Load your JS logic -->
-	<script src="ui.js"></script
+	<script src="ui.js"></script>
 	<script src="battle.js"></script>
 	
 </body>
