--- a/battle.html
+++ b/battle.html
@@ -8,5 +8,9 @@
 <body>
   <h1>Battle Page</h1>
   <div id="battle-log"></div>
+
+  <div id="enemySelectors">
+  <h2>Select Enemies (up to 10)</h2>
+  </div>
 </body>
 </html>
