--- a/battle.html
+++ b/battle.html
@@ -6,11 +6,13 @@
   <script src="battle.js" defer></script>
 </head>
 <body>
-  <h1>Battle Page</h1>
-  <div id="battle-log"></div>
-
   <div id="enemySelectors">
   <h2>Select Enemies (up to 10)</h2>
   </div>
+
+  <button id="battleBtn">Battle</button>
+  
+  <h1>Battle Page</h1>
+  <div id="battle-log"></div>
 </body>
 </html>
