--- a/battle.html
+++ b/battle.html
@@ -6,13 +6,11 @@
   <script src="battle.js" defer></script>
 </head>
 <body>
-  <div id="setup-log">
-    <h2>Your Setup</h2>
-  </div>
-  
-  <div id="enemySelectors">
-    <h2>Select Enemies (up to 10)</h2>
-  </div>
+  <h2>Your Setup</h2>
+  <div id="setup-log"></div>
+
+  <h2>Select Enemies (up to 10)</h2>
+  <div id="enemySelectors"></div>
 
   <!-- Batch selector -->
   <div id="batchEnemySelector">
