--- a/battle.html
+++ b/battle.html
@@ -9,12 +9,12 @@
   <h2>Your Setup</h2>
   <div id="setup-log"></div>
 
-  <h2>Select Enemies (up to 10)</h2>
+  <h2>Enemies Selector</h2>
+  <h3>Manual</h3>
   <div id="enemySelectors"></div>
 
-  <!-- Batch selector -->
+  <h3>Batch</h3>
   <div id="batchEnemySelector">
-    <h3>Batch Enemy Selector</h3>
     <label for="batchEnemyType">Enemy Type:</label>
     <select id="batchEnemyType">
       <option value="nonBoss">Non-Boss</option>
