--- a/battle.html
+++ b/battle.html
@@ -10,23 +10,11 @@
   <div id="setup-log"></div>
 
   <h2>Enemies Selector</h2>
-  <h3>Manual</h3>
+  <h3>Manual Selector</h3>
   <div id="enemySelectors"></div>
 
-  <h3>Batch</h3>
-  <div id="batchEnemySelector">
-    <label for="batchEnemyType">Enemy Type:</label>
-    <select id="batchEnemyType">
-      <option value="nonBoss">Non-Boss</option>
-      <option value="boss">Boss</option>
-      <option value="all">All</option>
-    </select>
-
-    <label for="batchEnemyRegion">Region:</label>
-    <select id="batchEnemyRegion">
-      <!-- Regions will be populated by buildEnemySelectors() from grimoire -->
-    </select>
-  </div>
+  <h3>Batch Selector</h3>
+  <div id="batchEnemySelector"></div>
 
   <br><br>
   <label for="simulations">Number of simulations:</label>
