--- a/battle.html
+++ b/battle.html
@@ -18,6 +18,14 @@
   <input type="number" id="simulations" value="1" min="1" max="10000">
 
   <br><br>
+  <h2>Saved Battles</h2>
+  <input type="text" id="battleName" placeholder="Enter battle name">
+  <button id="saveBattleBtn">Save Battle</button>
+  <select id="loadBattleSelect"></select>
+  <button id="loadBattleBtn">Load Battle</button>
+  <button id="deleteBattleBtn">Delete Battle</button>
+
+  <br><br>
   <button id="battleBtn">Battle</button>
   
   <h1>Battle Page</h1>
