--- a/battle.html
+++ b/battle.html
@@ -6,6 +6,9 @@
   <script src="battle.js" defer></script>
 </head>
 <body>
+  <button id="setupBtn">Back to Setup</button>
+
+  <br><br>
   <h2>Your Setup</h2>
   <div id="setup-log"></div>
 
