--- a/battle.html
+++ b/battle.html
@@ -13,7 +13,7 @@
   <div id="setup-log"></div>
 
   <h2>Enemies Selector</h2>
-  <div id="enemySelectors"></div>
+  <div id="manualEnemySelector"></div>
   <div id="batchEnemySelector"></div>
 
   <br><br>
