--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 	<div id="collection-selectors"></div>
 
 	<h2>Chosen Setup Skills</h2>
-	<div id="skills-output"></div>
-
+	<button id="toggleSkillsOutputBtn">Show Skills Output</button>
+	<div id="skills-output" class="hidden"></div>
+	
 	<h2>Skill Summary</h2>
-    <div id="skills-summary"></div>
+	<button id="toggleSkillsSummaryBtn">Hide Skills Summary</button>
+	<div id="skills-summary"></div>
 	
     <input type="text" id="setupName" placeholder="Setup Name">
 	<button id="saveSetupBtn">Save Setup</button>
