--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<h2>Chosen Setup Skills</h2>
 	<button id="toggleSkillsOutputBtn">Show Skills Output</button>
-	<div id="skills-output" class="hidden"></div>
+	<div id="skills-output"></div>
 	
 	<h2>Skill Summary</h2>
 	<button id="toggleSkillsSummaryBtn">Hide Skills Summary</button>
