--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 <body>
 	<h1>Bloodlore Chronicles Combat Prediction</h1>
 
+	<br><br>
+	<h2>Equipment Search Engine</h2>
 	<div id="equipment-selectors"></div>
 
+	<br><br>
 	<h2>Collections</h2>
 	<div id="collection-controls">
 		<button id="checkAllCollections">Check All</button>
@@ -17,14 +20,17 @@
 	</div>
 	<div id="collection-selectors"></div>
 
+	<br><br>
 	<h2>Chosen Setup Skills</h2>
 	<button id="toggleSkillsOutputBtn">Show Skills Output</button>
 	<div id="skills-output"></div>
-	
+
+	<br><br>
 	<h2>Skill Summary</h2>
 	<button id="toggleSkillsSummaryBtn">Hide Skills Summary</button>
 	<div id="skills-summary"></div>
-	
+
+	<br><br>
     <input type="text" id="setupName" placeholder="Setup Name">
 	<button id="saveSetupBtn">Save Setup</button>
 	<select id="loadSetupSelect"></select>
