--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	<div id="skills-summary"></div>
 
 	<br><br>
+	<h2>Setup Storage</h2>
     <input type="text" id="setupName" placeholder="Setup Name">
 	<button id="saveSetupBtn">Save Setup</button>
 	<select id="loadSetupSelect"></select>
