--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	<br><br>
 	<h2>Skill Summary</h2>
-	<button id="toggleSkillsSummaryBtn">Hide Skills Summary</button>
+	<button id="toggleSkillsSummaryBtn">Show Skills Summary</button>
 	<div id="skills-summary"></div>
 
 	<br><br>
