--- a/battle.html
+++ b/battle.html
@@ -10,6 +10,7 @@
 
   <br><br>
   <h2>Your Setup</h2>
+  <button id="toggleSetupBtn">Show Setup</button>
   <div id="setup-log"></div>
 
   <h2>Enemies Selector</h2>
