--- a/battle.html
+++ b/battle.html
@@ -9,7 +9,7 @@
   <button id="setupBtn">Back to Setup</button>
 
   <br><br>
-  <h2>Your Setup</h2>
+  <h2>Player Setup</h2>
   <button id="toggleSetupBtn">Show Setup</button>
   <div id="setup-log"></div>
 
