--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 	<br><br>
 	<h2>Equipment Search Engine</h2>
+	<button id="toggleSearchHelpBtn">Show Search Help</button>
 	<div id="equipment-selectors"></div>
 
 	<br><br>
