--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<br><br>
 	<h2>Equipment Search Engine</h2>
 	<button id="toggleSearchHelpBtn">Show Search Help</button>
+	<div id="search-help"></div>
 	<div id="equipment-selectors"></div>
 
 	<br><br>
