--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 	<button id="deleteSetupBtn">Delete</button>
 
 	<br><br>
-	<button id="goBattleBtn">Go to Battle</button>
+	<div>
+    <button id="goBattleBtn1">Send to Battle (Setup 1)</button>
+    <button id="goBattleBtn2">Send to Battle (Setup 2)</button>
+    <button id="goBattleBtn3">Send to Battle (Setup 3)</button>
+	</div>
 	
 	<!-- Load your JS logic -->
 	<script src="ui.js"></script>
