--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 	<button id="deleteSetupBtn">Delete</button>
 
 	<br><br>
-	<div>
-    <button id="goBattleBtn1">Send to Battle (Setup 1)</button>
-    <button id="goBattleBtn2">Send to Battle (Setup 2)</button>
-    <button id="goBattleBtn3">Send to Battle (Setup 3)</button>
-	</div>
+	<button id="saveSetup1">Save Setup 1</button> <span id="indicator1">⬜</span><br>
+	<button id="saveSetup2">Save Setup 2</button> <span id="indicator2">⬜</span><br>
+	<button id="saveSetup3">Save Setup 3</button> <span id="indicator3">⬜</span><br>
+	<hr>
+	<button id="sendToBattle">Send All Saved Setups to Battle</button>
 	
 	<!-- Load your JS logic -->
 	<script src="ui.js"></script>
