--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
 	<button id="deleteSetupBtn">Delete</button>
 
 	<br><br>
-	<button id="saveSetup1">Save Setup 1</button> <span id="indicator1">⬜</span><br>
-	<button id="saveSetup2">Save Setup 2</button> <span id="indicator2">⬜</span><br>
-	<button id="saveSetup3">Save Setup 3</button> <span id="indicator3">⬜</span><br>
-	<hr>
-	<button id="sendToBattle">Send All Saved Setups to Battle</button>
+	<button id="save1">Save Setup 1</button> <span id="ind1"></span><br>
+	<button id="save2">Save Setup 2</button> <span id="ind2"></span><br>
+	<button id="save3">Save Setup 3</button> <span id="ind3"></span><br><br>
+	<button id="sendAll">Send All to Battle</button>
 	
 	<!-- Load your JS logic -->
 	<script src="ui.js"></script>
