--- a/battle.html
+++ b/battle.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Battle</title>
+  <link rel="stylesheet" href="styles.css">
   <script src="battle.js" defer></script>
 </head>
 <body>
