--- a/battle.html
+++ b/battle.html
@@ -36,6 +36,6 @@
 
   <br><br>
   <h1>Battle Page</h1>
-  <div id="battle-log" style="white-space: pre-line; border:1px solid #ccc; padding:10px; max-height:300px; overflow-y:auto;"></div>
+  <div id="battle-log" class="log-box"></div>
 </body>
 </html>
