--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 	<button id="deleteSetupBtn">Delete</button>
 
 	<br><br>
-	<button id="saveSetup1">Save Setup 1</button> <span id="indicator1"></span><br>
-	<button id="saveSetup2">Save Setup 2</button> <span id="indicator2"></span><br>
-	<button id="saveSetup3">Save Setup 3</button> <span id="indicator3"></span><br><br>
+	<button onclick="askSetupCount()">Set Number of Setups</button>
+	<div id="setupButtons"></div>
+
+	<br><br>
 	<button id="sendToBattle">Send All to Battle</button>
 	
 	<!-- Load your JS logic -->
