--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
 	<button id="deleteSetupBtn">Delete</button>
 
 	<br><br>
-	<button onclick="askSetupCount()">Set Number of Setups</button>
+	<h2>Battle Preparation</h2>
+	<label for="setupCountInput">How many setups to compare?</label>
+	<input type="number" id="setupCountInput" value="1" min="1" max="5">
+	<button onclick="setSetupCount()">Confirm</button>
+	
 	<div id="setupButtons"></div>
-
-	<br><br>
-	<button id="sendToBattle">Send All to Battle</button>
+	<button id="sendToBattle">Send to Battle</button>
 	
 	<!-- Load your JS logic -->
 	<script src="ui.js"></script>
