--- a/battle.html
+++ b/battle.html
@@ -16,6 +16,8 @@
 
   <br><br>
   <h2>Enemies Selector</h2>
+  <button id="toggleEnemySearchHelpBtn">Show Enemy Search Help</button>
+	<div id="enemy-search-help"></div>
   <div id="manualEnemySelector"></div>
   <div id="batchEnemySelector"></div>
 
